netdata/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netdata
  namespace: kube-system
spec:
  selector:
    app: netdata
    role: parent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 19999
